<resources>
    <string name="app_name" translatable="false">Super Trivia</string>
    <string name="authentication">Authentication</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="cant_be_blank">%1$s can\'t be blank</string>
    <string name="has_already_been_taken">%1$s has already been taken</string>
    <string name="fields_mismatch">%1$s and %2$s don\'t match</string>
    <string name="is_too_short">%1$s is too short</string>
    <string name="is_invalid">%1$s is invalid</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="game_settings">Game Settings</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="random">Random</string>
    <string name="ranking" translatable="false">Ranking</string>
    <string name="game">Game</string>
    <string name="not_playing_game">You\'re not playing a game</string>
    <string name="start_game_instructions">Press the play button to start a new game</string>
    <string name="answer_problem">Answer</string>
    <string name="select_an_answer">Select an answer is required</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="want_to_continue">Do you want to continue?</string>
    <string name="score">Score</string>
    <string name="next_question">Next Question</string>
    <string name="finish_game">Finish Game</string>
    <string name="game_over">Game Over</string>
    <string name="started_at">Started At</string>
    <string name="finished_at">Finished At</string>
    <string name="conclude">Conclude</string>
</resources>